--- a/src/partials/table.html
+++ b/src/partials/table.html
@@ -1,5 +1,4 @@
 <section class="section-table">
-    <p>Monday</p>
     <table border="1">
         <tr>
             <th width="100">Station</th>
@@ -9,82 +8,82 @@
             <th>11:05-13:00</th>
             <th>13:10-14:30</th>
         </tr>
-        <tr>
+        <tr data-lh-fsb-okies>
             <td>F1-190-30</td>
             <td>LH FSB Okies</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-lh-fsb-roll-over-steam>
             <td>F1-190-20</td>
             <td>LH FSB Roll Over/Steam</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-rh-fsb-okies>
             <td>F1-210-30</td>
             <td>RH FSB Okies</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-rh-fsb-roll-over-steam>
             <td>F1-210-20</td>
             <td>RH FSB Roll Over/Steam</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-lh-fsc-okies>
             <td>F1-270-30</td>
             <td>LH FSC Okies</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-lh-fsc-roll-over-steam>
             <td>F1-270-20</td>
             <td>LH FSC Roll Over/Steam</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-rh-fsc-okies>
             <td>F1-310-30</td>
             <td>RH FSC Okies</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-rh-fsc-roll-over-steam>
             <td>F1-310-20</td>
             <td>RH FSC Roll Over/Steam</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-lh-cushion-install>
             <td>F1-270-10</td>
             <td>LH Cushion Install</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr>
+        <tr data-rh-cushion-install>
             <td>F1-310-10</td>
             <td>RH Cushion Install</td>
-            <td width="130" height="40"></td>
+            <td data-first width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
