--- a/src/partials/table.html
+++ b/src/partials/table.html
@@ -8,23 +8,23 @@
             <th>11:05-13:00</th>
             <th>13:10-14:30</th>
         </tr>
-        <tr data-lh-fsb-okies>
+        <tr data-name='lh-fsb-okies'>
             <td>F1-190-30</td>
             <td>LH FSB Okies</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-lh-fsb-roll-over-steam>
+        <tr data-name='lh-fsb-roll-over-steam'>
             <td>F1-190-20</td>
             <td>LH FSB Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-rh-fsb-okies>
+        <tr data-name='rh-fsb-okies'>
             <td>F1-210-30</td>
             <td>RH FSB Okies</td>
             <td data-first width="130" height="40"></td>
@@ -32,7 +32,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-rh-fsb-roll-over-steam>
+        <tr data-name='rh-fsb-roll-over-steam'>
             <td>F1-210-20</td>
             <td>RH FSB Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
@@ -40,7 +40,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-lh-fsc-okies>
+        <tr data-name='lh-fsc-okies'>
             <td>F1-270-30</td>
             <td>LH FSC Okies</td>
             <td data-first width="130" height="40"></td>
@@ -48,7 +48,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-lh-fsc-roll-over-steam>
+        <tr data-name='lh-fsc-roll-over-steam'>
             <td>F1-270-20</td>
             <td>LH FSC Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
@@ -56,7 +56,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-rh-fsc-okies>
+        <tr data-name='rh-fsc-okies'>
             <td>F1-310-30</td>
             <td>RH FSC Okies</td>
             <td data-first width="130" height="40"></td>
@@ -64,7 +64,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-rh-fsc-roll-over-steam>
+        <tr data-name='rh-fsc-roll-over-steam'>
             <td>F1-310-20</td>
             <td>RH FSC Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
@@ -72,7 +72,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-lh-cushion-install>
+        <tr data-name='lh-cushion-install'>
             <td>F1-270-10</td>
             <td>LH Cushion Install</td>
             <td data-first width="130" height="40"></td>
@@ -80,7 +80,7 @@
             <td width="130" height="40"></td>
             <td width="130" height="40"></td>
         </tr>
-        <tr data-rh-cushion-install>
+        <tr data-name='rh-cushion-install'>
             <td>F1-310-10</td>
             <td>RH Cushion Install</td>
             <td data-first width="130" height="40"></td>
