add function makeSchedule

--- a/src/partials/table.html
+++ b/src/partials/table.html
@@ -13,80 +13,80 @@
             <td>LH FSB Okies</td>
             <td data-first width="130" height="40"></td>
             <td data-second width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='lh-fsb-roll-over-steam'>
             <td>F1-190-20</td>
             <td>LH FSB Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
             <td data-second width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='rh-fsb-okies'>
             <td>F1-210-30</td>
             <td>RH FSB Okies</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='rh-fsb-roll-over-steam'>
             <td>F1-210-20</td>
             <td>RH FSB Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='lh-fsc-okies'>
             <td>F1-270-30</td>
             <td>LH FSC Okies</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='lh-fsc-roll-over-steam'>
             <td>F1-270-20</td>
             <td>LH FSC Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='rh-fsc-okies'>
             <td>F1-310-30</td>
             <td>RH FSC Okies</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='rh-fsc-roll-over-steam'>
             <td>F1-310-20</td>
             <td>RH FSC Roll Over/Steam</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='lh-cushion-install'>
             <td>F1-270-10</td>
             <td>LH Cushion Install</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
         <tr data-name='rh-cushion-install'>
             <td>F1-310-10</td>
             <td>RH Cushion Install</td>
             <td data-first width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
-            <td width="130" height="40"></td>
+            <td data-second width="130" height="40"></td>
+            <td data-third width="130" height="40"></td>
+            <td data-fourth width="130" height="40"></td>
         </tr>
 
     </table>
